--- a/index.html
+++ b/index.html
@@ -1,66 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Weather app </title>
-
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-
-        <div class="card">
-            <div class="search">
-                <input type="text" placeholder="Search for a city..." spellcheck="false">
-                <button><img src="weather-app-img\images\search.png" alt="image"></button>
-            </div>
-            <div class="weather">
-
-                <img src="weather-app-img\images\rain.png" class="weather-icon">
-                <h1 class="temperature">22°C</h1>
-                <h2 class="city">India</h2>
-                <div class="details">
-                    <div class="col">
-                        <img src="weather-app-img\images\humidity.png" alt="image">
-                        <div>
-                            <p class="humidity">50%</p>
-                            <p>Humidity</p>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <img src="weather-app-img\images\wind.png" alt="image">
-                        <div>
-                            <p class="wind">22km/hr</p>
-                            <p>Wind speed</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Weather app</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="card">
+    <div class="search">
+      <input type="text" placeholder="Search for a city..." spellcheck="false">
+      <button><img src="weather-app-img/images/search.png" alt="image"></button>
+    </div>
+    <div class="weather">
+      <img src="weather-app-img/images/rain.png" class="weather-icon">
+      <h1 class="temperature">22°C</h1>
+      <h2 class="city">India</h2>
+      <div class="details">
+        <div class="col">
+          <img src="weather-app-img/images/humidity.png" alt="image">
+          <div>
+            <p class="humidity">50%</p>
+            <p>Humidity</p>
+          </div>
         </div>
+        <div class="col">
+          <img src="weather-app-img/images/wind.png" alt="image">
+          <div>
+            <p class="wind">22km/hr</p>
+            <p>Wind speed</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <script>
+  <script>
+    const apikey = "367a5ac1eaba42923c0a645bd07f7b04";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
-            const apikey = "367a5ac1eaba42923c0a645bd07f7b04";
-            const apiUrl = "https://api.openweathermap.org/data/2.5/weather?q=jaipur&units=metric";
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
 
-            async function checkWeather() {
-                const response = await fetch(apiUrl + `&appid=${apikey}`);
-                var data = await response.json();
-                console.log(data);
+    async function checkWeather(city) {
+      const response = await fetch(apiUrl + city + `&appid=${apikey}`);
+      var data = await response.json();
+      console.log(data);
 
-                document.querySelector(".city").innerHTML = data.name;
-                document.querySelector(".temperature").innerHTML = Math.round(data.main.temp) + "°C";
-                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
-                document.querySelector(".wind").innerHTML = data.wind.speed + " km/hr";
-            }
-            checkWeather();
+      if (data.cod === "404") {
+        document.querySelector(".city").innerHTML = "City not found!";
+        document.querySelector(".temperature").innerHTML = "--";
+        document.querySelector(".humidity").innerHTML = "--";
+        document.querySelector(".wind").innerHTML = "--";
+      } else {
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temperature").innerHTML = data.main.temp + "°C";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " km/hr";
+      }
+    }
 
-        </script>
+    // Run when button is clicked
+    searchBtn.addEventListener("click", () => {
+      checkWeather(searchBox.value);
+    });
 
-
-    </body>
-
+    // Default city (optional)
+    checkWeather("Jaipur");
+  </script>
+</body>
 </html>
